xine-lib (1-beta13)
  * xine broadcaster (send stream to multiple xine clients simultaneously)
    start master with 'xine --broadcast-port xxxx'
    start slaves with 'xine slave://master_address:xxxx'
  * nvtv updates and fixes
  * Nullsoft Video (.nsv) file demuxer
  * libdvdnav: fix some situations where an unlucky user could trigger assertions
  * decoder priority handling: configuring a priority of 0 means "use default"
    users are advised to set all decoder priorities to 0 in their config files
  * dvd:<path> and dvd:<device> MRLs now work when a DVD is in the drive to
    which the raw device setting points to (libdvdcss tried to access the raw device)
  * fix dxr3 sync problems after seeking
  * fix potential playback problems for MPEG files with rare framerates
    (23.976, 59.94 and 60 fps)
  * move http proxy configuration to xine itself
  * add expand post video filter for displaying subtitles in borders
  * speex (http://www.speex.org) audio decoder support
  * dxr3: libavcodec from xine's ffmpeg plugin can now be used for MPEG reencoding
    (so reencoding is now possible without installing any additional libraries)
  * add support seeking in real media files
  * fix playback of real video 1.0 (rv10)
	
xine-lib (1-beta12)
  * enabled SVQ3 video decoding via ffmpeg
  * playback of theorastreams added
  * updated nvtv support, and bug fixes
  * ac3 pcm-audiotype .wav files now supported via software decode.
    Passthru not implemented yet due to lack of re-sync code in liba52 passthru mode.
  * playback of cd/dvd over the network (see README.network_dvd)
  * use variable block program stream demuxer for mpeg2 files
  * cdda improvements (error handling, device on mrl)
  * input_pvr (ivtv) updates
  * demux_mpeg_block improved to cure problems with VCDs and bogus encrypted messages.
    
xine-lib (1-beta11)
  * fix bugs in selecting ogm subtitles
  * fix multiple lines subtitles' display in OGM container