@@ -4,6 +4,7 @@ xine-lib (1-beta13)
     start slaves with 'xine slave://master_address:xxxx'
   * nvtv updates and fixes
   * Nullsoft Video (.nsv) file demuxer
+  * 4X Technologies (.4xm) file demuxer
   * libdvdnav: fix some situations where an unlucky user could trigger assertions
   * decoder priority handling: configuring a priority of 0 means "use default"
     users are advised to set all decoder priorities to 0 in their config files
